# osprey-sidecars

./: .gitignore  README.md
account_entropy/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
account_entropy/src/account_entropy/: analyzer.py  config.py  db.py  main.py  queries.py  telemetry.py
account_entropy/tests/: test_analyzer.py  test_config.py  test_db.py  test_docs.py  test_main.py  test_no_otel_in_core.py  test_queries.py  test_telemetry.py
docs/: calibration.md
docs/design-plans/: 2026-07-06-density-dismantling.md  2026-07-06-stats-methodology.md
docs/implementation-plans/2026-07-06-density-dismantling/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  test-requirements.md
docs/implementation-plans/2026-07-06-stats-methodology/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  test-requirements.md
docs/test-plans/: 2026-07-06-density-dismantling.md  2026-07-06-stats-methodology.md
quote_cosharing/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
quote_cosharing/src/quote_cosharing/: analyzer.py  config.py  db.py  main.py  queries.py  telemetry.py
quote_cosharing/tests/: test_analyzer.py  test_config.py  test_db.py  test_docs.py  test_main.py  test_no_otel_in_core.py  test_queries.py  test_telemetry.py
quote_overdispersion/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
quote_overdispersion/src/quote_overdispersion/: analyzer.py  config.py  counts.py  db.py  main.py  queries.py  telemetry.py
quote_overdispersion/tests/: test_analyzer.py  test_config.py  test_counts.py  test_db.py  test_density.py  test_docs.py  test_fdr.py  test_main.py  test_no_otel_in_core.py  test_queries.py  test_telemetry.py
signup_anomaly/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
signup_anomaly/src/signup_anomaly/: analyzer.py  config.py  db.py  fdr.py  main.py  queries.py  telemetry.py
signup_anomaly/tests/: test_analyzer.py  test_config.py  test_counts.py  test_db.py  test_docs.py  test_fdr.py  test_main.py  test_no_otel_in_core.py  test_queries.py  test_telemetry.py
url_cosharing/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
url_cosharing/src/url_cosharing/: analyzer.py  backfill.py  calibrate.py  config.py  db.py  dismantling.py  main.py  queries.py  similarity.py  telemetry.py
url_cosharing/tests/: test_analyzer.py  test_backfill.py  test_calibrate.py  test_config.py  test_db.py  test_dismantling.py  test_docs.py  test_main.py  test_queries.py  test_similarity.py  test_telemetry.py
url_overdispersion/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
url_overdispersion/src/url_overdispersion/: analyzer.py  config.py  db.py  density.py  main.py  queries.py  telemetry.py
url_overdispersion/tests/: test_analyzer.py  test_config.py  test_counts.py  test_db.py  test_density.py  test_docs.py  test_fdr.py  test_main.py  test_no_otel_in_core.py  test_queries.py  test_telemetry.py
