[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "url-cosharing"
version = "0.1.0"
description = "URL co-sharing graph clustering sidecar for Osprey"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.8.0",
    "igraph>=1.0.0",
    "leidenalg>=0.11.0",
    "numpy>=1.26.0",
    "scipy>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B006",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
